--- a/story/src/components/Tag.css
+++ b/story/src/components/Tag.css
@@ -4,7 +4,7 @@
     @apply outline-zinc-300 bg-transparent;
 }
 .outline:hover {
-    @apply outline-zinc-300 bg-transparent;
+    @apply outline-blue-500 bg-blue-100 text-blue-600;
 }
 
 .small {
