--- a/story/src/components/Tag.css
+++ b/story/src/components/Tag.css
@@ -3,6 +3,7 @@
 .outline {
     @apply outline-zinc-300 bg-transparent;
 }
+
 .outline:hover {
     @apply outline-blue-500 bg-blue-100 text-blue-600;
 }
@@ -13,4 +14,8 @@
 
 .readonly span {
     @apply hidden;
+}
+
+.readonly {
+    @apply pointer-events-none;
 }
