--- a/story/src/components/Tag.css
+++ b/story/src/components/Tag.css
@@ -1,21 +1,25 @@
 @import "tailwindcss";
 
-.outline {
+.tag.outline {
     @apply outline-zinc-300 bg-transparent;
 }
 
-.outline:hover {
+.tag.outline:hover {
     @apply outline-blue-500 bg-blue-100 text-blue-600;
 }
 
-.small {
+.tag.small {
     @apply px-2 py-1;
 }
 
-.readonly span {
+.tag.readonly .close {
     @apply hidden;
 }
 
-.readonly {
+.tag.readonly {
     @apply pointer-events-none;
+}
+
+.tag span:empty {
+    @apply hidden;
 }
