--- a/story/src/components/Avatar.css
+++ b/story/src/components/Avatar.css
@@ -13,5 +13,8 @@
 }
 
 .avatar:empty{
-    @apply bg-slate-700;
+    @apply bg-slate-700 text-white;
+}
+.avatar:empty::after{
+    content: 'N/A';
 }
